--- a/style.css
+++ b/style.css
@@ -70,17 +70,23 @@ input[type="radio"] {
   font-size: 16px;
 }
 
+.remember {
+  text-align: right;
+  height: 35px;
+}
+
 .remember input[type="checkbox"] {
   appearance: none;
   width: 16px;
   height: 16px;
   border: 2px solid #ffffff;
-  border-radius: 4px;
+  border-radius: 5px;
   display: inline-block;
   position: relative;
   cursor: pointer;
   transition: 0.3s;
-  transform: translate(10%, 40%);
+  margin: ;
+  transform: translate(1%, 40%);
 }
 .remember input[type="checkbox"]:checked {
   background-color: #ff7e43;
